# Supple-Crystal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: CONTRIBUTING.md  README.md
include/: App.hpp  HotkeyController.hpp  ImageDisplay.hpp  ImageViewer.hpp  MessageBox.hpp  OSUtils.hpp  ResourceLoader.hpp  SlideController.hpp  Utils.hpp
include/Menus/: ContextMenu.hpp  MenuInterface.hpp  PopupMenu.hpp  PopupMenuButton.hpp  style-constants.hpp
include/UI/Controllers/: Controller.hpp  HotkeyController.hpp  SlideController.hpp
include/UI/Elements/: UIElement.hpp
include/UI/Elements/Buttons/: Button.hpp  PopupMenuButton.hpp  ToolbarMenuButton.hpp
include/UI/Elements/Displays/: ImageDisplay.hpp
include/UI/Elements/Menus/: ContextMenu.hpp  MenuInterface.hpp  PopupMenu.hpp  ToolbarMenu.hpp
include/UI/Settings/: style-constants.hpp
include/Utils/: CyclicalDoublyLinkedList.hpp  ListOps.hpp  LoadOps.hpp  StringOps.hpp  WindowOps.hpp
resource/: icon.rc
src/: App.cpp  HotkeyController.cpp  ImageDisplay.cpp  ImageViewer.cpp  MessageBox.cpp  UNIXUtils.cpp  Utils.cpp  WinUtils.cpp  main.cpp
src/Menus/: ContextMenu.cpp  PopupMenu.cpp  PopupMenuButton.cpp
src/UI/Controllers/: HotkeyController.cpp  SlideController.cpp
src/UI/Elements/Buttons/: PopupMenuButton.cpp
src/UI/Elements/Displays/: ImageDisplay.cpp
src/UI/Elements/Menus/: ContextMenu.cpp  PopupMenu.cpp  ToolbarMenu.cpp
src/Utils/: StringOps.cpp  WindowOps.cpp  WindowOpsUnix.cpp  WindowOpsWindows.cpp
tests/: tests.cpp
